Fixed z-index bug with colour animation.

--- a/wp-content/themes/kinart/src/scss/components/front-page-colours.scss
+++ b/wp-content/themes/kinart/src/scss/components/front-page-colours.scss
@@ -1,3 +1,5 @@
+@import '../mixins/animations';
+
 .front-page-colours {
 	position: absolute;
 	top: 0;
@@ -8,14 +10,14 @@
 	&__foreground {
 		width: 100%;
 		height: 100%;
-		animation-name: slideInFromLeft;
+		@include slide(inFromLeft);
 	}
 	&__background {
 		width: 3000px;
 		height: 2000px;
 		bottom: 0;
 		z-index: 1;
-		animation-name: slideInFromRight;
+		@include slide(inFromRight);
 	}
 	&__foreground, &__background {
 		position: absolute;
@@ -26,31 +28,14 @@
 	}
 	&--open {
 		.front-page-colours__foreground {
-			animation-name: slideOutToLeft;
+			@include slide(outToLeft);
 		}
 		.front-page-colours__background {
-			animation-name: slideOutToRight;
+			@include slide(outToRight);
 		}
+	}
+	&--back {
+		z-index: -10;
 	}
 }
 
-@keyframes slideInFromRight {
-	0% { left: 120%; }
-	100% { left: 0; }
-}
-
-@keyframes slideOutToRight {
-	0% { left: 0; }
-	100% { left: 120%; }
-
-}
-
-@keyframes slideInFromLeft {
-	0% { right: 120%; }
-	100% { right: 0; }
-}
-
-@keyframes slideOutToLeft {
-	0% { right: 0; }
-	100% { right: 120%; }
-}
